force-app/main/default/objects/Case_Plan__c/fields/At_or_near_age_level__c.field-meta.xml
<CustomField>
    <fullName>At_or_near_age_level__c</fullName>
    <label>At or near age level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>