force-app/main/default/objects/Case_Plan__c/fields/Behavioral_problems__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_problems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral problems</label>
    <type>Checkbox</type>
</CustomField>