force-app/main/default/objects/Case_Plan__c/fields/Best_interest_to_change_schools__c.field-meta.xml
<CustomField>
    <fullName>Best_interest_to_change_schools__c</fullName>
    <inlineHelpText>Explain why it was in the child&apos;s best interest to change schools</inlineHelpText>
    <label>Best interest to change schools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>