force-app/main/default/objects/Case_Plan__c/fields/Case_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Plan_Name__c</fullName>
    <formula>&quot;CASE PLAN- &quot;&amp;TEXT( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Plan Name</label>
    <type>Text</type>
</CustomField>