force-app/main/default/objects/Case_Plan__c/fields/caseworker_Service_EndDate__c.field-meta.xml
<CustomField>
    <fullName>caseworker_Service_EndDate__c</fullName>
    <label>caseworker Service EndDate</label>
    <type>Date</type>
</CustomField>