force-app/main/default/objects/Case_Plan__c/fields/caseworker_Service_StartDate__c.field-meta.xml
<CustomField>
    <fullName>caseworker_Service_StartDate__c</fullName>
    <label>caseworker Service StartDate</label>
    <type>Date</type>
</CustomField>