force-app/main/default/objects/Case_Plan__c/fields/Child_current_report_card__c.field-meta.xml
<CustomField>
    <fullName>Child_current_report_card__c</fullName>
    <inlineHelpText>Is there a copy of the child&apos;s current report card in the record?</inlineHelpText>
    <label>Child current report card</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>