force-app/main/default/objects/Case_Plan__c/fields/Child_IN_Out_Of_Home_Placement__c.field-meta.xml
<CustomField>
    <fullName>Child_IN_Out_Of_Home_Placement__c</fullName>
    <inlineHelpText>CHILD IN OUT-OF-HOME PLACEMENT FOR 15 MONTHS OR LONGER?</inlineHelpText>
    <label>Child IN Out Of Home Placement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>