force-app/main/default/objects/Case_Plan__c/fields/Child_is_between_18_and_21_years_old__c.field-meta.xml
<CustomField>
    <fullName>Child_is_between_18_and_21_years_old__c</fullName>
    <description>If a child is between 18 and 21 years old,is he/she in school,employed,or disabled?</description>
    <label>Child is between 18 and 21 years old</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>