force-app/main/default/objects/Case_Plan__c/fields/Child_Support_Order_Been_Established__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Order_Been_Established__c</fullName>
    <label>Child Support Order Been Established</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>