force-app/main/default/objects/Case_Plan__c/fields/Child_Support_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Referral_Date__c</fullName>
    <label>Child Support Referral Date</label>
    <type>Date</type>
</CustomField>