force-app/main/default/objects/Case_Plan__c/fields/Date_of_last_Progress_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Progress_Report__c</fullName>
    <inlineHelpText>Date of last Progress Report from purchase of Care / Treatment Foster Care Facility?</inlineHelpText>
    <label>Date of last Progress Report</label>
    <type>Date</type>
</CustomField>