force-app/main/default/objects/Case_Plan__c/fields/Date_of_Voluntary_signature_Mother__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Voluntary_signature_Mother__c</fullName>
    <label>Date of Voluntary signature Mother</label>
    <type>Date</type>
</CustomField>