force-app/main/default/objects/Case_Plan__c/fields/Date_TPR_Appeal_Filed_Mother__c.field-meta.xml
<CustomField>
    <fullName>Date_TPR_Appeal_Filed_Mother__c</fullName>
    <label>Date TPR Appeal Filed Mother</label>
    <type>Date</type>
</CustomField>