force-app/main/default/objects/Case_Plan__c/fields/Date_TPR_Denied__c.field-meta.xml
<CustomField>
    <fullName>Date_TPR_Denied__c</fullName>
    <label>Date TPR Denied</label>
    <type>Date</type>
</CustomField>