force-app/main/default/objects/Case_Plan__c/fields/Date_TPR_Granted__c.field-meta.xml
<CustomField>
    <fullName>Date_TPR_Granted__c</fullName>
    <label>Date TPR Granted</label>
    <type>Date</type>
</CustomField>