force-app/main/default/objects/Case_Plan__c/fields/Date_TPR_Petition_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_TPR_Petition_Filed__c</fullName>
    <label>Date TPR Petition Filed</label>
    <type>Date</type>
</CustomField>