force-app/main/default/objects/Case_Plan__c/fields/Dates_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Dates_Confirmed__c</fullName>
    <label>Dates Confirmed</label>
    <type>Date</type>
</CustomField>