force-app/main/default/objects/Case_Plan__c/fields/Describe_the_child_strengths__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_child_strengths__c</fullName>
    <inlineHelpText>Describe the child&apos;s strengths and needs</inlineHelpText>
    <label>Describe the child strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>