force-app/main/default/objects/Case_Plan__c/fields/Describe_the_parent_current_relationship__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_parent_current_relationship__c</fullName>
    <inlineHelpText>Describe the parent&apos;s current relationship with the child.</inlineHelpText>
    <label>Describe the parent current relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>