force-app/main/default/objects/Case_Plan__c/fields/Discuss_each_checked_iteam__c.field-meta.xml
<CustomField>
    <fullName>Discuss_each_checked_iteam__c</fullName>
    <inlineHelpText>Discuss each checked iteam including how the services help meet the needs of the child and provider,provides for the child&apos;s safety,and facilitate the achievement of a permanent placement for the child.</inlineHelpText>
    <label>Discuss each checked iteam</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>