force-app/main/default/objects/Case_Plan__c/fields/Discuss_how_the_worker_is_addressing__c.field-meta.xml
<CustomField>
    <fullName>Discuss_how_the_worker_is_addressing__c</fullName>
    <inlineHelpText>Discuss how the worker is addressing the child&apos;s needs(Specify the needs and services,include by reference dates all contact sheet notes documenting visitation between child and caseworker).</inlineHelpText>
    <label>Discuss how the worker is addressing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>