force-app/main/default/objects/Case_Plan__c/fields/Discuss_parent_child_interaction__c.field-meta.xml
<CustomField>
    <fullName>Discuss_parent_child_interaction__c</fullName>
    <inlineHelpText>Discuss parent-child interaction during visits(where applicable).</inlineHelpText>
    <label>Discuss parent-child interaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>