force-app/main/default/objects/Case_Plan__c/fields/Discuss_Services_Youth_Will_Require__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Services_Youth_Will_Require__c</fullName>
    <inlineHelpText>Discuss services the youth will require in order to live independently.List what steps are begin taken to arrange for needed services.Consideration should be given to any documented special needs that the youth may have.If yes,list specific services needed.</inlineHelpText>
    <label>Discuss Services Youth Will Require</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>