force-app/main/default/objects/Case_Plan__c/fields/Discuss_the_appropriateness__c.field-meta.xml
<CustomField>
    <fullName>Discuss_the_appropriateness__c</fullName>
    <inlineHelpText>Discuss the appropriateness of the child&apos;s current educational setting.</inlineHelpText>
    <label>Discuss the appropriateness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>