force-app/main/default/objects/Case_Plan__c/fields/Discuss_the_visitation_plan__c.field-meta.xml
<CustomField>
    <fullName>Discuss_the_visitation_plan__c</fullName>
    <inlineHelpText>Discuss the visitation plan and any accommodations needed.</inlineHelpText>
    <label>Discuss the visitation plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>