force-app/main/default/objects/Case_Plan__c/fields/Discussion_of_Childs_Needs__c.field-meta.xml
<CustomField>
    <fullName>Discussion_of_Childs_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discussion of Childs Needs</label>
    <type>Checkbox</type>
</CustomField>