force-app/main/default/objects/Case_Plan__c/fields/Discussion_of_Visitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Discussion_of_Visitation_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discussion of Visitation Date</label>
    <type>Checkbox</type>
</CustomField>