force-app/main/default/objects/Case_Plan__c/fields/Does_the_child_have_any_diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Does_the_child_have_any_diagnosed__c</fullName>
    <inlineHelpText>Does the child have any diagnosed physical or mental health disabilities(explain and give date of diagnosis)?</inlineHelpText>
    <label>Does the child have any diagnosed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>