force-app/main/default/objects/Case_Plan__c/fields/Educational_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Educational_Parent_Name__c</fullName>
    <label>Educational Parent Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>