force-app/main/default/objects/Case_Plan__c/fields/Emotional_Support_or_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Support_or_Guidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emotional Support or Guidance</label>
    <type>Checkbox</type>
</CustomField>