force-app/main/default/objects/Case_Plan__c/fields/Financial_Support__c.field-meta.xml
<CustomField>
    <fullName>Financial_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Support</label>
    <type>Checkbox</type>
</CustomField>