force-app/main/default/objects/Case_Plan__c/fields/Follow_up_information_on_court_orders__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_information_on_court_orders__c</fullName>
    <inlineHelpText>Follow-up information on court orders(including dates)</inlineHelpText>
    <label>Follow-up information on court orders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>