force-app/main/default/objects/Case_Plan__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <label>From Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>