force-app/main/default/objects/Case_Plan__c/fields/Has_the_child_changed_school__c.field-meta.xml
<CustomField>
    <fullName>Has_the_child_changed_school__c</fullName>
    <inlineHelpText>Has the child changed school due to placement?</inlineHelpText>
    <label>Has the child changed school</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>