force-app/main/default/objects/Case_Plan__c/fields/Has_the_youth_experienced_Explain__c.field-meta.xml
<CustomField>
    <fullName>Has_the_youth_experienced_Explain__c</fullName>
    <inlineHelpText>Has the youth experienced any episodes of incarcerations or detainment in juvenile facility during this reporting period?.Explain</inlineHelpText>
    <label>Has the youth experienced Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>