force-app/main/default/objects/Case_Plan__c/fields/Has_youth_experienced_any_episodes__c.field-meta.xml
<CustomField>
    <fullName>Has_youth_experienced_any_episodes__c</fullName>
    <inlineHelpText>.Has the youth experienced any episodes of incarcerations or detainment in juvenile facility during this reporting period?</inlineHelpText>
    <label>Has youth experienced any episodes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>