force-app/main/default/objects/Case_Plan__c/fields/Has_youth_had_involvement__c.field-meta.xml
<CustomField>
    <fullName>Has_youth_had_involvement__c</fullName>
    <inlineHelpText>.Has the youth had involvement with the Juvenile Court as a result of delinquency related charges?</inlineHelpText>
    <label>Has  youth had involvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>