force-app/main/default/objects/Case_Plan__c/fields/Health_Passport__c.field-meta.xml
<CustomField>
    <fullName>Health_Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Passport</label>
    <type>Checkbox</type>
</CustomField>