force-app/main/default/objects/Case_Plan__c/fields/Homelessness_during_reporting_period__c.field-meta.xml
<CustomField>
    <fullName>Homelessness_during_reporting_period__c</fullName>
    <inlineHelpText>Has the child experience any episodes of homelessness during this reporting period?</inlineHelpText>
    <label>Homelessness during  reporting period</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>