force-app/main/default/objects/Case_Plan__c/fields/If_child_is_pre_school_age__c.field-meta.xml
<CustomField>
    <fullName>If_child_is_pre_school_age__c</fullName>
    <inlineHelpText>If child is pre-school age and developmentally delayed,is the child enrolled in a special program?</inlineHelpText>
    <label>If child is pre-school age</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>