force-app/main/default/objects/Case_Plan__c/fields/If_Other__c.field-meta.xml
<CustomField>
    <fullName>If_Other__c</fullName>
    <label>If Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>