force-app/main/default/objects/Case_Plan__c/fields/Individual_Education_Program__c.field-meta.xml
<CustomField>
    <fullName>Individual_Education_Program__c</fullName>
    <label>Individual Education Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>