force-app/main/default/objects/Case_Plan__c/fields/Is_the_child_co_committed__c.field-meta.xml
<CustomField>
    <fullName>Is_the_child_co_committed__c</fullName>
    <label>Is the child co-committed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>