force-app/main/default/objects/Case_Plan__c/fields/Is_this_school_placement__c.field-meta.xml
<CustomField>
    <fullName>Is_this_school_placement__c</fullName>
    <inlineHelpText>Is this school placement in close proximity to the school attended prior to placement?</inlineHelpText>
    <label>Is this school placement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>