force-app/main/default/objects/Case_Plan__c/fields/Length_Of_Time_Child_Was_Homeless__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Time_Child_Was_Homeless__c</fullName>
    <inlineHelpText>If yes indicate the length of time the child was homeless</inlineHelpText>
    <label>Length Of Time Child Was Homeless</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>