force-app/main/default/objects/Case_Plan__c/fields/List_mandates_of_court_order_pertaining__c.field-meta.xml
<CustomField>
    <fullName>List_mandates_of_court_order_pertaining__c</fullName>
    <inlineHelpText>List mandates of court order pertaining to the child.Indicate date of court order.</inlineHelpText>
    <label>List mandates of court order pertaining</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>