force-app/main/default/objects/Case_Plan__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>