force-app/main/default/objects/Case_Plan__c/fields/Passport_Record_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Passport_Record_Confirmation__c</fullName>
    <label>Passport/Record Confirmation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>