force-app/main/default/objects/Case_Plan__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service Case is closed</errorMessage>
        <filterItems>
            <field>Placement__c.Service_Case__r.Status__c</field>
            <operation>notEqual</operation>
            <value>Close</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Case Plans</relationshipLabel>
    <relationshipName>Case_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>