force-app/main/default/objects/Case_Plan__c/fields/Problems_with_peers__c.field-meta.xml
<CustomField>
    <fullName>Problems_with_peers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problems with peers</label>
    <type>Checkbox</type>
</CustomField>