force-app/main/default/objects/Case_Plan__c/fields/Referral_Made_to_Adoptuskids__c.field-meta.xml
<CustomField>
    <fullName>Referral_Made_to_Adoptuskids__c</fullName>
    <inlineHelpText>Referral Made to Adoptuskids(Date)?</inlineHelpText>
    <label>Referral Made to Adoptuskids</label>
    <type>Date</type>
</CustomField>