force-app/main/default/objects/Case_Plan__c/fields/Reimbursement_for_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_for_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursement for Expenses</label>
    <type>Checkbox</type>
</CustomField>