force-app/main/default/objects/Case_Plan__c/fields/Special_Training__c.field-meta.xml
<CustomField>
    <fullName>Special_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Training</label>
    <type>Checkbox</type>
</CustomField>