force-app/main/default/objects/Case_Plan__c/fields/State_Compelling_Reason__c.field-meta.xml
<CustomField>
    <fullName>State_Compelling_Reason__c</fullName>
    <inlineHelpText>IF YES,STATE COMPELLING REASON NOT TO FILE TPR PETITION</inlineHelpText>
    <label>State Compelling Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>