force-app/main/default/objects/Case_Plan__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>To Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>