force-app/main/default/objects/Case_Plan__c/fields/TPR_Appeal_Decision_Mother__c.field-meta.xml
<CustomField>
    <fullName>TPR_Appeal_Decision_Mother__c</fullName>
    <label>TPR Appeal Decision Mother</label>
    <type>Date</type>
</CustomField>