force-app/main/default/objects/Case_Plan__c/fields/Was_the_child_enrolled_in_school__c.field-meta.xml
<CustomField>
    <fullName>Was_the_child_enrolled_in_school__c</fullName>
    <inlineHelpText>Was the child enrolled in school within 5 days of placement?School Not in Session Comments</inlineHelpText>
    <label>Was the child enrolled in school</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>