force-app/main/default/objects/Case_Plan__c/fields/Weakness__c.field-meta.xml
<CustomField>
    <fullName>Weakness__c</fullName>
    <label>Weakness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>