force-app/main/default/objects/Case_Plan__c/fields/What_Educational_services__c.field-meta.xml
<CustomField>
    <fullName>What_Educational_services__c</fullName>
    <inlineHelpText>What Educational services is the child receiving?</inlineHelpText>
    <label>What Educational services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>