force-app/main/default/objects/Case_Plan__c/fields/What_services_are_being_provided__c.field-meta.xml
<CustomField>
    <fullName>What_services_are_being_provided__c</fullName>
    <inlineHelpText>What services are being provided to the child to facilitate permanency and/or self-sufficiency?</inlineHelpText>
    <label>What services are being provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>