force-app/main/default/objects/Case_Plan__c/fields/What_services_have_we_identified__c.field-meta.xml
<CustomField>
    <fullName>What_services_have_we_identified__c</fullName>
    <inlineHelpText>What services have we identified that are needed for the child to return home that are unavailable in our community?</inlineHelpText>
    <label>What services have we identified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>