force-app/main/default/objects/Case_Plan__c/fields/What_services_provided_to_eliminate__c.field-meta.xml
<CustomField>
    <fullName>What_services_provided_to_eliminate__c</fullName>
    <inlineHelpText>What services have been provided to eliminate the safety barriers that brought the child into care and to move the child toward permanency?</inlineHelpText>
    <label>What services provided to eliminate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>