force-app/main/default/objects/Case_Plan__c/fields/Will_Youth_Require_Supportive_Services__c.field-meta.xml
<CustomField>
    <fullName>Will_Youth_Require_Supportive_Services__c</fullName>
    <inlineHelpText>Will the youth require supportive services to live independently after termination of out-of-home services?</inlineHelpText>
    <label>Will Youth Require Supportive Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>